# ai-hack-oncocia

./: .gitignore  PRD.md  README.md  architecture-and-business-logic.md  improvement_requirement_rough.md  input.md  status.md  technical-doc.md
backend/: .gitignore  adk_orchestrator.py  config.py  hello.py  main.py  mcp_grants.py  mcp_medicare.py  mcp_nadac.py  mcp_openfda.py  models.py  needymeds_content.html  pyproject.toml  test_api.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: HeroFlowController.tsx  types.ts
frontend/components/ui/: CopilotModal.tsx
frontend/components/views/: DashboardView.tsx  IntakeView.tsx  ProcessingView.tsx
frontend/docs/: frontend-handoff.md  information-architecture.md  state-management.md  user-personas.md  wireframes.md
