[project]
name = "ai-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "google-adk>=2.3.0",
    "lxml>=6.1.1",
    "mcp>=1.28.1",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "playwright>=1.61.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.50.0",
]
